// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create DB from github : kosko generate jobs/create-db --env dev 1`] = `
"apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.github.com/job: xxxxxxx-job
    app.github.com/ref: refs/heads/e2e-branch
    app.github.com/repo: socialgouv/sample-kosko
    app.github.com/run: '12345'
    app.github.com/sha: '8843083'
  labels:
    application: sample-kosko
    component: sample-kosko
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: create-db-user-8843083
  namespace: sample-kosko-e2e-branch
spec:
  backoffLimit: 5
  template:
    spec:
      containers:
        - command:
            - create-db-user
          env:
            - name: NEW_DB_NAME
              value: sample-kosko-e2e-branch
            - name: NEW_USER
              value: sample-kosko-e2e-branch
            - name: NEW_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: PGPASSWORD
                  name: pgpassword
            - name: NEW_DB_EXTENSIONS
              value: hstore pgcrypto citext uuid-ossp
          envFrom:
            - secretRef:
                name: azure-pg-admin-user
          image: ghcr.io/socialgouv/docker/azure-db:6.64.0
          imagePullPolicy: IfNotPresent
          name: create-db-user
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      restartPolicy: Never
  ttlSecondsAfterFinished: 86400"
`;

exports[`create DB from gitlab : kosko generate jobs/create-db --env dev 1`] = `
"apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-sample-kosko
    app.gitlab.com/env: e2e-branch-42
    app.gitlab.com/env.name: e2e-branch-dev2
  labels:
    application: e2e-branch-42-sample-kosko
    component: e2e-branch-42-sample-kosko
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: create-db-user-8843083
  namespace: sample-kosko-24-e2e-branch-42
spec:
  backoffLimit: 5
  template:
    spec:
      containers:
        - command:
            - create-db-user
          env:
            - name: NEW_DB_NAME
              value: sample-kosko-e2e-branch
            - name: NEW_USER
              value: sample-kosko-e2e-branch
            - name: NEW_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: PGPASSWORD
                  name: pgpassword
            - name: NEW_DB_EXTENSIONS
              value: hstore pgcrypto citext uuid-ossp
          envFrom:
            - secretRef:
                name: azure-pg-admin-user
          image: ghcr.io/socialgouv/docker/azure-db:6.64.0
          imagePullPolicy: IfNotPresent
          name: create-db-user
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      restartPolicy: Never
  ttlSecondsAfterFinished: 86400"
`;
